crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__joined_string_recovery_10.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"\"\"\"\n  ${CC}\n\"\"\"\"#)"
---
Node {
    node: JoinedString(
        JoinedString {
            is_long_string: true,
            values: [
                Node {
                    node: StringLit(
                        StringLit {
                            is_long_string: false,
                            raw_value: "\n  ",
                            value: "\n  ",
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 1,
                },
                Node {
                    node: FormattedValue(
                        FormattedValue {
                            is_long_string: false,
                            value: Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "CC",
                                                filename: "",
                                                line: 2,
                                                column: 4,
                                                end_line: 2,
                                                end_column: 6,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 2,
                                column: 4,
                                end_line: 2,
                                end_column: 6,
                            },
                            format_spec: None,
                        },
                    ),
                    filename: "",
                    line: 2,
                    column: 4,
                    end_line: 2,
                    end_column: 6,
                },
                Node {
                    node: StringLit(
                        StringLit {
                            is_long_string: false,
                            raw_value: "\n",
                            value: "\n",
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 1,
                },
            ],
            raw_value: "\"\"\"\n  ${CC}\n\"\"\"",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 3,
    end_column: 3,
}
