crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__joined_string_recovery_2.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"'${(a +}'\"#)"
---
Node {
    node: JoinedString(
        JoinedString {
            is_long_string: false,
            values: [
                Node {
                    node: FormattedValue(
                        FormattedValue {
                            is_long_string: false,
                            value: Node {
                                node: Paren(
                                    ParenExpr {
                                        expr: Node {
                                            node: Binary(
                                                BinaryExpr {
                                                    left: Node {
                                                        node: Identifier(
                                                            Identifier {
                                                                names: [
                                                                    Node {
                                                                        node: "a",
                                                                        filename: "",
                                                                        line: 1,
                                                                        column: 4,
                                                                        end_line: 1,
                                                                        end_column: 5,
                                                                    },
                                                                ],
                                                                pkgpath: "",
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 4,
                                                        end_line: 1,
                                                        end_column: 5,
                                                    },
                                                    op: Add,
                                                    right: Node {
                                                        node: Missing(
                                                            MissingExpr,
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 7,
                                                        end_line: 1,
                                                        end_column: 7,
                                                    },
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 4,
                                            end_line: 1,
                                            end_column: 7,
                                        },
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 3,
                                end_line: 1,
                                end_column: 7,
                            },
                            format_spec: None,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 3,
                    end_line: 1,
                    end_column: 7,
                },
            ],
            raw_value: "'${(a +}'",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 9,
}
